--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "less": "^2.7.1",
     "react": "^15.3.2",
-    "react-dom": "^15.3.2"
+    "react-dom": "^15.3.2",
+    "react-google-charts": "^1.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
